--- a/src/app/components/promo-dashboard/promo-dashboard.component.css
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.css
@@ -406,3 +406,17 @@
 .mb {
     margin-bottom: 50px;
 }
+
+.two-charts {
+    display: flex;
+    gap: 20px;
+    margin: 0 20px;
+}
+
+.mat-cell {
+    justify-content: center;
+}
+
+.mat-cell-left {
+    justify-content: left;
+}
