--- a/src/app/dialogs/excelDialogs/exportPositionsDialog/export-positions-dialog.component.html
+++ b/src/app/dialogs/excelDialogs/exportPositionsDialog/export-positions-dialog.component.html
@@ -60,6 +60,13 @@
       </mat-form-field>
     </div>
 
+    <label>
+      <input type="radio" name="option" value="positions" [(ngModel)]="positionsOrSuggestions" checked> Positions
+    </label>
+    <label>
+      <input type="radio" name="option" value="suggestions" [(ngModel)]="positionsOrSuggestions"> Suggestions
+    </label>
+
     <div mat-dialog-actions class="wrap">
 
 
