Prikaz za vrednosti ropi ty u tabeli

--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -93,7 +93,7 @@
                     <ng-container matColumnDef="ropiThisYear">
                         <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI This Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI">{{ row.ropi }}%</mat-cell>
+                        <mat-cell *matCellDef="let row" data-label="ROPI">{{ row.ropiThisYear }}%</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiDifference">
